--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -11,12 +11,17 @@
   }
 
   @include breakpoint(480px) {
-    width: 327px;
+    width: 100%;
+  }
+
+  .highlight {
+    border: 2px solid $red;
   }
 
   .item-image-add-to-cart {
     width: 100%;
     @include flex(column);
+    border-radius: 10px;
 
     img {
       aspect-ratio: 1;
